--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "dependencies": {
     "core-js": "^3.4.3",
+    "element-ui": "^2.13.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3",
+    "vue-router": "^3.0.7",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
